adds day four solutions

--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,10 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
     implementation "com.github.michaelruocco:file-loader:7.0.4"
+    implementation "org.apache.commons:commons-lang3:3.17.0"
+    implementation "org.apache.commons:commons-collections4:4.5.0-M2"
 
+    testRuntimeOnly "org.slf4j:slf4j-simple:${slf4jVersion}"
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
