--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
     id "pl.allegro.tech.build.axion-release" version "1.18.16"
     id "org.sonarqube" version "6.0.1.5171"
     id "com.adarshr.test-logger" version "4.0.0"
-    id "nebula.lint" version "20.3.0"
+    id "nebula.lint" version "20.3.1"
 }
 
 group "com.github.michaelruocco"
@@ -18,7 +18,7 @@ ext {
     slf4jVersion = "2.0.16"
     lombokVersion = "1.18.36"
 
-    junitVersion = "5.11.3"
+    junitVersion = "5.11.4"
 }
 
 scmVersion {
@@ -44,7 +44,7 @@ dependencies {
 
     implementation "com.github.michaelruocco:file-loader:7.0.4"
     implementation "org.apache.commons:commons-lang3:3.17.0"
-    implementation "org.apache.commons:commons-collections4:4.5.0-M2"
+    implementation "org.apache.commons:commons-collections4:4.4"
 
     testRuntimeOnly "org.slf4j:slf4j-simple:${slf4jVersion}"
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
@@ -52,7 +52,7 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
-    testImplementation "org.assertj:assertj-core:3.26.3"
+    testImplementation "org.assertj:assertj-core:3.27.0"
     testImplementation "org.mockito:mockito-core:5.14.2"
 }
 
