--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -66,9 +66,10 @@ jobs:
         run: ./gradlew sonar
 
       - name: Codecov Coverage
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
         with:
           file: ./build/reports/jacoco/report.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Codacy Coverage
         uses: codacy/codacy-coverage-reporter-action@v1
